version 2.6 - Hypostyle

	+ Fixed sql problems with Maria DB. Any_value is not supported there
	+ Fixed some query and data loading brain fucks..
	+ Updated third party informations in readme
	+ Fixed xml import xsd

version 2.5.2 - Darkmere (2020-09-12)

    + Fixed bug #8 It is possible to add empty tags and categories.
        Special chars check done on server side. JS has problems with unicode.
    + Fixed bug #7 Edit categories/tags. Rename and move
    + Fixed feature #3 Reduce whitespace in frontend

version 2.5.1 - Caves of Circe (2020-03-22)

    + Bugfix release

version 2.5 - Winnowing Hall (2020-03-21)

    + Added a thumbnail by talking to Google page speed API
      Planned was a full page snapshot, but only got the thumbnail.
      Needs some more work with headless chrome.
    + Instead you can now decide to make a full page screenshot
      using wkhtmltoimage. See documentation about it.
    + Improved documentation

version 2.4 - Seven Portals (2020-02-16)

    + Now including update instructions
    + DB export only insipid tables and not the whole DB itself.
    + Simple xml export and import
    + #2 Protection if the email-import.php file if it needs to be
        in a web accessible folder
    + Fixed the search for words. See update instructions how to correct your data
    + Removed JS and replaced it with plain old working JS
    + Dropped IE support. Edge still working.

version 2.3 - Guardian of Steel (2019-12-30)

    + Improved documentation
    + Delete single local storage of a link
    ++ Done by uncheck the store image locally option
    + Sorting in category overview
    + Sorting in tag overview
    + Simple complete DB dump as download as backup solution
    + Fixed a bug in tag selection SQL query

version 2.2 - Guardian of Ice - (2019-02-27)

    + email import
    + using mysql transactions if needed
    + pagination
    + authentication with an extra url now (index.php?m=auth)