@@ -1,5 +1,4 @@
 TODO / Feature list
-+ translation support
 + adapt new php 7
 ++ http://php.net/manual/en/migration70.new-features.php#migration70.new-features.null-coalesce-op
 
