@@ -3,4 +3,4 @@ convention. English is eng.lang.ini and german is ger.lang.ini
 
 The FRONTEND_LANGUAGE setting in config.php defines the used language.
 
-If no or wrong FRONTEND_LANGUAGE is set eng will be used.
+If no or wrong FRONTEND_LANGUAGE is set, eng will be used.
