@@ -1,7 +1,7 @@
 If you are updating from a previous version make sure every update info from
 the version your are updating from is done.
 
-## version 2.6 - Darkmere
+## version 2.6 - Hypostyle
 
 + Update config file with the new language setting. See config.default and
   translation.txt for more information
